fix: vertical lines of tabs-cards on mobiles

--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -249,6 +249,7 @@
         min-width: 100%
         border-left: none 
         overflow-y: hidden
+        border-top: 1px solid $line-color
   .grid
     &-wrapper
       grid-template: 520px repeat(13, 170px) / 1fr
